--- a/templates/backtest.html
+++ b/templates/backtest.html
@@ -23,6 +23,8 @@
     <label for="strat">Strategy</label><br>
     <select name="strat" id="strat">
         <option value="bband_rsi_algo">RSI and BBands</option>
+        <option value="hammer">Hammer</option>
+
     </select><br>
 
     <input type="submit" value="Run Backtest">
