--- a/templates/dashboard_copy.html
+++ b/templates/dashboard_copy.html
@@ -7,24 +7,121 @@
 <link href="../assets/dist/css/bootstrap.css" rel="stylesheet">
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
+      body {
+  font-size: .875rem;
+background-color:rgb(196, 192, 192);
+}
+h1 {
+  color: rbg(230, 190, 162);
+}
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+}
+
+.feather {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+}
+
+/*
+ * Sidebar
+ */
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100; /* Behind the navbar */
+  padding: 48px 0 0; /* Height of navbar */
+
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+
+}
+
+@media (max-width: 767.98px) {
+  .sidebar {
+    top: 5rem;
+  }
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: .5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+  .sidebar-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+}
+
+.sidebar .nav-link {
+  font-weight: 500;
+  color: #333;
+}
+
+.sidebar .nav-link .feather {
+  margin-right: 4px;
+  color: #999;
+}
+
+.sidebar .nav-link.active {
+  color: #007bff;
+}
+
+.sidebar .nav-link:hover .feather,
+.sidebar .nav-link.active .feather {
+  color: inherit;
+}
+
+.sidebar-heading {
+  font-size: .75rem;
+  text-transform: uppercase;
+}
+
+/*
+ * Navbar
+ */
+
+.navbar-brand {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  font-size: 1rem;
+  background-color: rgba(0, 0, 0, .25);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+}
+
+.navbar .navbar-toggler {
+  top: .25rem;
+  right: 1rem;
+}
+
+.navbar .form-control {
+  padding: .75rem 1rem;
+  border-width: 0;
+  border-radius: 0;
+}
+
+.form-control-dark {
+  color: #fff;
+  background-color: rgba(255, 255, 255, .1);
+  border-color: rgba(255, 255, 255, .1);
+}
+
+.form-control-dark:focus {
+  border-color: transparent;
+  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+}
 
     </style>
 
-    <link href="/Users/gusleisentritt/PycharmProjects/SP_DayTrading/WebFiles/dashboard.css" rel="stylesheet">
+    <link href="/Users/ryangould/Downloads/SP_DayTrading/static/css/dashboard.css" rel="stylesheet">
   <style type="text/css">/* Chart.js */
 @-webkit-keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}@keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}.chartjs-render-monitor{-webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;}</style></head>
   <body>
@@ -37,7 +134,16 @@
 
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+      <a class="nav-link" href="#">Results</a>
+    </li>
+    <li class="nav-item text-nowrap">
+      <a class="nav-link" href="#">Trades</a>
+    </li>
+    <li class="nav-item text-nowrap">
+      <a class="nav-link" href="#">Performance</a>
+    </li>
+    <li class="nav-item text-nowrap">
+      <a class="nav-link" href="#">Trades</a>
     </li>
   </ul>
 </nav>
@@ -78,7 +184,6 @@
         <table class="table table-striped table-sm">
           <thead>
             <tr>
-              <th>#id</th>
               <th>Symbol</th>
               <th>High</th>
               <th>Low</th>
@@ -92,85 +197,20 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-            </tr>
+            {% for item in trades %}
+            <TR>
+              <TD class="c2">{{item.symbol}}</TD>
+              <TD class="c3">{{item.high}}</TD>
+              <TD class="c4"><SPAN>{{item.low}}</SPAN></TD>
+              <TD class="c5"><SPAN>{{item.open}}</SPAN></TD>
+              <TD class="c5"><SPAN>{{item.close}}</SPAN></TD>
+              <TD class="c5"><SPAN>{{item.volume}}</SPAN></TD>
+              <TD class="c5"><SPAN>{{item.sharecount}}</SPAN></TD>
+              <TD class="c5"><SPAN>{{item.timestamp}}</SPAN></TD>
+              <TD class="c5"><SPAN>{{item.tradetype}}</SPAN></TD>
 
-            <tr>
-              <td>1,004</td>
-              <td>dapibus</td>
-              <td>diam</td>
-              <td>Sed</td>
-              <td>nisi</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-            </tr>
-            <tr>
-              <td>1,005</td>
-              <td>Nulla</td>
-              <td>quis</td>
-              <td>sem</td>
-              <td>at</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-            </tr>
-            <tr>
-              <td>1,006</td>
-              <td>nibh</td>
-              <td>elementum</td>
-              <td>imperdiet</td>
-              <td>Duis</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-            </tr>
-            <tr>
-              <td>1,007</td>
-              <td>sagittis</td>
-              <td>ipsum</td>
-              <td>Praesent</td>
-              <td>mauris</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>massa</td>
-              <td>Vestibulum</td>
-              <td>lacinia</td>
-              <td>arcu</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-              <td>Place holder</td>
-            </tr>
+            </TR>
+            {% endfor %}
           </tbody>
         </table>
       </div>
@@ -218,6 +258,15 @@
       </div>
 
       <h2>Harvested Data</h2>
+            <h3> Select a symbol to see it's movement.</h3>
+            <form class="form-inline" method="POST" action="{{ url_for('dashboard') }}">
+              <select name= "symbol" method="GET" action="/">
+                {% for symbol in symbols %}
+                <option value= "{{symbol}}" SELECTED>{{symbol}}</option>"
+                {% endfor %}
+              </select>
+              <button type="submit" class="btn btn-default" onclick="">Go</button>
+            </form>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
@@ -232,44 +281,18 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
-            </tr>
-            <tr>
-              <td>1,002</td>
-              <td>amet</td>
-              <td>consectetur</td>
-              <td>adipiscing</td>
-              <td>elit</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>Integer</td>
-              <td>nec</td>
-              <td>odio</td>
-              <td>Praesent</td>
-            </tr>
+          {% for item in stonks %}
+          <TR>
+            <TD class="c2">{{item.symbol}}</TD>
+            <TD class="c3">{{item.high}}</TD>
+            <TD class="c4"><SPAN>{{item.low}}</SPAN></TD>
+            <TD class="c5"><SPAN>{{item.open}}</SPAN></TD>
+            <TD class="c5"><SPAN>{{item.close}}</SPAN></TD>
+            <TD class="c5"><SPAN>{{item.volume}}</SPAN></TD>
+            <TD class="c5"><SPAN>{{item.timestamp}}</SPAN></TD>
 
-            <tr>
-              <td>1,007</td>
-              <td>sagittis</td>
-              <td>ipsum</td>
-              <td>Praesent</td>
-              <td>mauris</td>
-            </tr>
-
-            <tr>
-              <td>1,009</td>
-              <td>augue</td>
-              <td>semper</td>
-              <td>porta</td>
-              <td>Mauris</td>
-            </tr>
-
+          </TR>
+          {% endfor %}
           </tbody>
         </table>
       </div>
