--- a/templates/backtest.html
+++ b/templates/backtest.html
@@ -5,7 +5,14 @@
     <title>The Grand Exchange Backtest</title>
 </head>
 <body>
+<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
 
+    <ul class="navbar-nav px-3">
+        <li class="nav-item text-nowrap">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+    </ul>
+</nav>
 <form action="/backtest" method="post">
 
     <label for="cash">Starting Cash</label><br>
