--- a/templates/dashboard_copy.html
+++ b/templates/dashboard_copy.html
@@ -3,6 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/dashboard/">
+  {% block styles %}
+  <link rel="stylesheet"
+        href="{{url_for('static', filename='css/bootstrap.css')}}">
+  {% endblock %}
   <script>
 window.onload = function () {
 var hammerChanges = {{hammerChanges|tojson}};
@@ -83,121 +87,6 @@ function toggleDataSeries(e){
 }
 </script>
 <link href="../assets/dist/css/bootstrap.css" rel="stylesheet">
-
-    <style>
-      body {
-  font-size: .875rem;
-background-color:rgb(196, 192, 192);
-}
-h1 {
-  color: rbg(230, 190, 162);
-}
-
-}
-
-.feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
-}
-
-/*
- * Sidebar
- */
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-
-}
-
-@media (max-width: 767.98px) {
-  .sidebar {
-    top: 5rem;
-  }
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
-
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-}
-
-/*
- * Navbar
- */
-
-.navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 1rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
-
-.navbar .navbar-toggler {
-  top: .25rem;
-  right: 1rem;
-}
-
-.navbar .form-control {
-  padding: .75rem 1rem;
-  border-width: 0;
-  border-radius: 0;
-}
-
-.form-control-dark {
-  color: #fff;
-  background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
-}
-
-.form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
-}
-
-    </style>
 
     <link href="/Users/ryangould/Downloads/SP_DayTrading/static/css/dashboard.css" rel="stylesheet">
   <style type="text/css">/* Chart.js */
