--- a/templates/dashboard_copy.html
+++ b/templates/dashboard_copy.html
@@ -126,7 +126,7 @@ function toggleDataSeries(e){
         <a name="Results"></a>
         <div class="table-responsive">
           <thread>
-            </thread><table style="text-align:center;">
+            </thread><table class="table table-striped table-sm" style="text-align:center;">
           <thead>
           <tr>
             <th>Starting Cash</th>
