--- a/templates/backtest.html
+++ b/templates/backtest.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    {% block styles %}
+    <link rel="stylesheet"
+          href="{{url_for('static', filename='css/bootstrap.css')}}">
+    {% endblock %}
     <title>The Grand Exchange Backtest</title>
 </head>
 <body>
