last dash changes

--- a/templates/backtest.html
+++ b/templates/backtest.html
@@ -35,6 +35,9 @@
     <select name="strat" id="strat">
         <option value="bband_rsi_algo">RSI and BBands</option>
         <option value="hammer">Hammer</option>
+        <option value="morningStar">MorningStar</option>
+        <option value="senkouB">SenkouB</option>
+
 
     </select><br>
 
